// geoservice/proto/tripInfo/tripInfo.proto
syntax = "proto3";

package tripInfo;

service GeoService {
  rpc GetTripInfo(Route) returns (Response) {}
}

message Route {
  string From = 1;
  string To = 2;
  string SpanContext = 3;
}

message Response {
  int32 Distance = 1;
  int32 Duration = 2;
  string SpanContext = 3;
}
